--- a/calculator/templates/result.html
+++ b/calculator/templates/result.html
@@ -2,7 +2,7 @@
 
 {% block content %} 
 <h1>
-    Here you go {{ request.user }} !!
+    Here you go:)
 </h1>
 
 {% for prev_object in prev_objects %}
